# cmake_stm32l

./: CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake
BSP/Src/: main.c
ChibiOS/os/hal/src/: hal.c
cmake/: ChibiOS.cmake  ChibiOS20.cmake  FindChibiOS.cmake
projects/01/: CMakeLists.txt  main.c
projects/02/: CMakeLists.txt  main.c
projects/03/: CMakeLists.txt  halconf.h  main.c  mcuconf.h
src/: main.c
src/cfg/: halconf.h
